Updated the app to include mental health news around the globe

--- a/Prototype UI/doctor.html
+++ b/Prototype UI/doctor.html
@@ -15,7 +15,11 @@
         <section>
             <header class="heading">
                 <div>
-                    <h2 style="color: black; text-align: center; padding-top: 10px; padding-bottom: 50px;">Mental Health Resources near you</h2>
+                    <h2 style="text-align: center; padding-bottom: 20px;">Mental Health Resources near you</h2>
+                    <div class="red">
+                        <h3>Suicide Hotline</h3>
+                        <h3>800-273-8255</h3>
+                    </div>
                 </div>
             </header>
             <div class="hospitals">
