--- a/Prototype UI/main.html
+++ b/Prototype UI/main.html
@@ -19,9 +19,16 @@
                     <h5 class="benu">Contact Us</h5>
                 </div>
                 <img src="./img/mental_health.png" class="big" alt="Header" width="90%">
-                <h3 style="color: black; text-align: center; padding-bottom: 30px;">Pandemic Wellness</h3>
+                <h3 style="color: black; text-align: center;">Project Wellness</h3>
+                <img src="./img/logo.png" class="big" alt="Header" width="12%" style="padding-bottom: 20px;">
             </header>
             <main class="main">
+                <div class="buttons">
+                    <a href="news.html">
+                    <img src="./img/news.png" class="small" alt="news" width="50%">
+                    </a>
+                    <h4 style="color: black; text-align: center; margin-top: 10px;">Mental health around the globe</h4>
+                </div>
                 <div class="buttons">
                     <a href="visualization.html">
                     <img src="./img/visualization.png" class="small" alt="map" width="50%">
