--- a/Prototype UI/map.html
+++ b/Prototype UI/map.html
@@ -12,17 +12,22 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     </head>
     <body>
-        <section>
+        <section class="landscape">
             <header class="heading">
                 <div>
-                    <h2 style="color: black; text-align: center; padding-top: 10px; padding-bottom: 50px;">Global Map</h2>
+                    <h2 style="color: black; text-align: center; padding-top: 10px; padding-bottom: 10px;">Global Map for COVID-19 Information</h2>
+                    <div class="red">
+                    </div>
                 </div>
             </header>
             <main>
                 <div class="map">
-                    <!--"Big ass global map, probably a dashboard"-->
-                    <h4 style="color: black; text-align: center; margin-top: 10px;">Interactive Global Map (FILLER)</h4>
-                    <img src="./img/map.jpg" class="viz" alt="map" width="90%">
+                    <h4 style="color: black; text-align: center; margin-top: 10px;">Average Tone on COVID-19 by Country and Source Type</h4>
+                    <img src="./img/Dashboard_1.png" class="viz" alt="map" width="100%">
+                </div>
+                <div class="map" style="border-top: 1px dotted black;">
+                    <h4 style="color: black; text-align: center; margin-top: 40px;">Average Deaths/Cases by Transmission Classification</h4>
+                    <img src="./img/Dashboard_2.png" class="viz" alt="map" width="100%">
                 </div>
             </main>
         </section>
