--- a/Prototype UI/visualization.html
+++ b/Prototype UI/visualization.html
@@ -15,19 +15,21 @@
         <section>
             <header class="heading">
                 <div>
-                    <h2 style="color: black; text-align: center; padding-top: 10px; padding-bottom: 50px;">Visualizations</h2>
+                    <h2 style="color: black; text-align: center; padding-top: 10px; padding-bottom: 15px;">Visualizations</h2>
+                    <div class="red">
+                    </div>
                 </div>
             </header>
             <main>
                 <div class="graphs">
-                    <!--"WORD CLOUD PER SOCIAL MEDIA"-->
-                    <h4 style="color: black; text-align: center; margin-top: 30px;">Word Cloud (FILLER)</h4>
-                    <img src="./img/visualization.png" class="viz" alt="word_cloud" width="90%">
+                    <!--"BOXES FOR STATS ON THINGS LIKE % COMMUNITY TRANSMISSIONS, # of tweets and sentiment/tone, covid case deaths per country vs tone of country, etc"-->
+                    <h4 style="color: black; text-align: center; margin-top: 15px;">Statistics</h4>
+                    <img src="./img/cool.png" class="viz" alt="boxes" width="90%">
                 </div>
                 <div class="graphs">
-                    <!--"BOXES FOR STATS ON THINGS LIKE % COMMUNITY TRANSMISSIONS, # of tweets and sentiment/tone, covid case deaths per country vs tone of country, etc"-->
-                    <h4 style="color: black; text-align: center; margin-top: 10px;">Statistics (FILLER)</h4>
-                    <img src="./img/compass.png" class="viz" alt="boxes" width="90%">
+                    <!--"WORD CLOUD PER SOCIAL MEDIA"-->
+                    <h4 style="color: black; text-align: center; margin-top: 15px;">Word Cloud</h4>
+                    <img src="./img/word_cloud.png" class="viz" alt="word_cloud" width="90%">
                 </div>
             </main>
         </section>
