--- a/Prototype UI/main.html
+++ b/Prototype UI/main.html
@@ -15,7 +15,7 @@
         <section>
             <header>
                 <div class="menu">
-                    <img src="./img/menu.png" class="menu" width="50">
+                    <img src="./img/menu.png" class="menu" width="50px">
                     <h5 class="benu">Contact Us</h5>
                 </div>
                 <img src="./img/mental_health.png" class="big" alt="Header" width="90%">
